--- a/.github/workflows/Daily-Production-Check.yml
+++ b/.github/workflows/Daily-Production-Check.yml
@@ -69,7 +69,7 @@ jobs:
         #
         #  * smtp://user:password@server:port
         #  * smtp+starttls://user:password@server:port
-        connection_url: ${{secrets.EMAIL_CONNECTION}}
+        #connection_url: ${{secrets.EMAIL_CONNECTION}}
         # Required mail server address if not connection_url:
         server_address: smtp.gmail.com
         # Server port, default 25:
