--- a/.github/workflows/Daily-Production-Check.yml
+++ b/.github/workflows/Daily-Production-Check.yml
@@ -71,7 +71,7 @@ jobs:
         #  * smtp+starttls://user:password@server:port
         #connection_url: ${{secrets.EMAIL_CONNECTION}}
         # Required mail server address if not connection_url:
-        server_address: smtp.gmail.com
+        server_address: ${{secrets.SERVER_ADDRESS}}
         # Server port, default 25:
         server_port: 465
         # Optional whether this connection use TLS (default is true if server_port is 465)
