--- a/.github/workflows/Daily-Production-Check.yml
+++ b/.github/workflows/Daily-Production-Check.yml
@@ -8,7 +8,8 @@ name: Send Email with Daily Production Status
 on:
   schedule:
     # At 7am Mon through Fri
-    - cron: "0 7 * * 1-5"
+    #- cron: "0 7 * * 1-5"
+    - cron: "*/15 * * * *"
   workflow_dispatch:
 
 jobs:
