run EVS-All-Production workflows every 15 min

--- a/.github/workflows/EVS-All-Production.yml
+++ b/.github/workflows/EVS-All-Production.yml
@@ -8,7 +8,9 @@ name: EVS All Production
 on:
   schedule:
     # At 6am, 9am, Noon, 3pm, and 6pm, Mon through Fri
-    - cron: "0 6,7,8,9,10,11,12,13,14,15,16,17 * * 1-5"
+    # - cron: "0 6,7,8,9,10,11,12,13,14,15,16,17 * * 1-5"
+    # every fifteen minutes
+    - cron: "0,15,30,45 * * * *"
   workflow_dispatch:
 
 jobs:
