--- a/.github/workflows/EVS-Explore.yml
+++ b/.github/workflows/EVS-Explore.yml
@@ -14,13 +14,13 @@ on:
 jobs:
   test:
     timeout-minutes: 60
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     defaults:
       run:
         working-directory: ./
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
       with:
         node-version: 20
       
